--- a/platformio.ini
+++ b/platformio.ini
@@ -1,16 +1,15 @@
 ; PlatformIO Project Configuration File
 ;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
+;   Build options: build flags, source filter, extra scripting
+;   Upload options: custom port, speed and extra flags
 ;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
 ;
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
+
 [env:nodemcuv2]
 platform = espressif8266
+framework = arduino
 board = nodemcuv2
-framework = esp8266-nonos-sdk
-build_flags = -I include
 monitor_speed = 115200
