--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -240,5 +240,8 @@
     "**/.vscode",
     "**/.vscode/**"
   ],
-  "C_Cpp.errorSquiggles": "Disabled"
+  "C_Cpp.errorSquiggles": "Disabled",
+  "files.associations": {
+    "chrono": "cpp"
+  }
 }
