--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,4 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
+lib_deps = adafruit/Adafruit NeoPixel@^1.10.5
