--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
+lib_deps = 
+	sparkfun/SparkFun ADS1015 Arduino Library@^2.3.0
+	kosme/arduinoFFT@^1.5.6
+monitor_speed = 115200
