--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 lib_deps = 
+	ESP Async WebServer
 	sparkfun/SparkFun ADS1015 Arduino Library@^2.3.0
 	kosme/arduinoFFT@^1.5.6
     adafruit/Adafruit NeoPixel@^1.10.5
