--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -291,6 +291,9 @@
     "stdexcept": "cpp",
     "streambuf": "cpp",
     "cinttypes": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "bitset": "cpp",
+    "regex": "cpp",
+    "iostream": "cpp"
   }
 }
