--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,12 @@ jobs:
       - name: Build PlatformIO Project
         run: platformio run
 
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+
       - uses: actions/upload-artifact@v3
         with:
-            name: frimware
+            name: frimware-${{ steps.date.outputs.date }}
             path: |
                 .pio/build/nodemcu-32s/firmware.bin
