--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,5 @@ jobs:
         with:
             name: ${{ steps.get_date.outputs.build_date }}
             tag_name: ${{ steps.get_date.outputs.build_date }}
-            path: |
+            files: |
                 .pio/build/nodemcu-32s/firmware.bin
