--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
       - name: get new release version
         id: get_new_version
         run: |
-            BUILD_DATE=$(date +'%Y.%m')
+            BUILD_DATE=$(date +'%Y.%-m')
             LATEST_TAG=${{ steps.get-latest-tag.outputs.tag }}
             MAJOR_MINOR_LATEST=$(awk -F. '{ OFS = "." } ; { print $1,$2 }' <<< $LATEST_TAG)
             NEW_PATCH="0"
